Bug 113725 - Sidebar: Controls are crammed in Slide content panel in Master view if going from Handout view
Summary: Sidebar: Controls are crammed in Slide content panel in Master view if going ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
: 113661 113895 (view as bug list)
Depends on:
Blocks: Sidebar-Properties-Slide
  Show dependency treegraph
 
Reported: 2017-11-09 00:11 UTC by Xisco Faulí
Modified: 2017-11-17 09:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (24.36 KB, image/png)
2017-11-09 00:11 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-11-09 00:11:56 UTC
Created attachment 137627 [details]
screenshot

Steps to reproduce:
1. Open Impress
2. Go to View - Master Handout
3. Go to View - Master Slide

Spacing between elements in the sidebar is none. See attached image

Reproduced in

Version: 6.0.0.0.alpha1+
Build ID: 5e0022c90c4125a1590b3688dfec73c271b7aedd
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: th-TH (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-11-09 00:14:28 UTC
Regression introduced by:

author	blendergeek <timothy@eastlincoln.net>	2017-09-05 21:12:21 (GMT)
committer	Tamás Zolnai <tamas.zolnai@collabora.com>	2017-09-06 15:02:30 (GMT)
commit 6758db065d77bdebed54e5d3532796a2c3c24088 (patch)
tree ad8f3b49ce507dd6c886613f3afa7672ceb285a7
parent 4fa014099e99d91088f55b15273117fd0fc26679 (diff)
tdf#111834: hide useless background controls in Handout View

Bisected with: bibisect-linux64-6.0

Adding Cc: to blendergeek
Comment 2 Yousuf Philips (jay) (retired) 2017-11-09 09:21:00 UTC
Not exclusively a gtk3 issue.

Version: 6.0.0.0.alpha1+
Build ID: 5e0022c90c4125a1590b3688dfec73c271b7aedd
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 3 Tamás Zolnai 2017-11-09 20:37:18 UTC
*** Bug 113661 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2017-11-10 18:35:49 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=537d4e672e2e5d175c7e0bc9cf4a7efb2bec72be

tdf#113725: Sidebar: Controls are crammed in Slide content panel

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-11-11 10:49:15 UTC
Verified in

Version: 6.0.0.0.alpha1+
Build ID: 5d12237d79f289a1dcf8e07aa03df329e136f078
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: th-TH (ca_ES.UTF-8); Calc: group
Comment 6 Xisco Faulí 2017-11-17 09:23:53 UTC
*** Bug 113895 has been marked as a duplicate of this bug. ***