tdf#113725: Sidebar: Controls are crammed in Slide content panel

Need to trigger a layouting to get the right panel size after we
show / hode context related items.

Change-Id: I791921ecb491bb65c53a4fe9562207d47f66a88a